# inbound-inquiry-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
config/: categories.yaml
docs/: classification-config.md  cli-usage.md  input-formats.md  installation.md  output-format.md
src/inbound_inquiry_analyzer/: __main__.py  api_client.py  classifier.py  claude_classifier.py  cli.py  config.py  normalizer.py  orchestrator.py  parser.py  xlsx_writer.py
tests/: test_api_client.py  test_classifier.py  test_claude_classifier.py  test_cli.py  test_config_add_category.py  test_normalizer.py  test_orchestrator.py  test_parser.py  test_xlsx_writer.py
